--- a/ideal_model.yml
+++ b/ideal_model.yml
@@ -1,21 +1,33 @@
 ---
 definitions:
   aggregates:
-    station:
-      station: station
+    station: station
   entities:
     person:
-      id: id
       name: name
       age: age
+      workemail: email
+      personalemail: email
     station:
-      id: id
       name: name
       description: description
       owner: person aggregate
       nicks: collectionOf name
       wheels: collectionOf wheel
-  value_objects:
+  value-objects:
+    email:
+      user: name
+      domain: name
+    quote-value:
+      quote: name
+      value-timestamp: timestamp
+      value: quote-value
+    exchange-rate:
+      instant: timestamp
+      source-currency: currency
+      target-currency: currency
+      rate: rate
+  primitives:
     date:
       type: date
     age:
@@ -28,3 +40,21 @@ definitions:
       type: string
     description:
       type: string
+    timestamp:
+      type: date
+    quote-value:
+      type: number
+      decimals: 4
+      rounding: halfup
+    rate:
+      type: number
+      decimals: 4
+      rounding:
+        - halfup
+        - halfdown
+        - halfaway0
+        - halfto0
+        - halfeven
+        - halfodd
+        - floor
+        - ceiling
