template for filename added

--- a/templates/vue-vuetify/manifesto1.json
+++ b/templates/vue-vuetify/manifesto1.json
@@ -1,6 +1,7 @@
 {
    "ext":".vue",
    "folder": "src/components",
+   "fileNameTemplate" : "{{pascal entityName}}{{pascal usecase}}",
    "technologies":[
       "vue-vuetify"
    ],
