some templates updated

--- a/templates/api-client/manifesto1.json
+++ b/templates/api-client/manifesto1.json
@@ -1,12 +1,11 @@
 {
    "ext":".js",
-   "folder": "src/lib",
    "fileNameTemplate" : "{{entityName}}-{{usecase}}-proxy",
    "technologies":[
       "api-client"
    ],
    "useCases":[
-      "repository"
+       {"name":"repository", "folder":"src/lib" }
    ],
    "entity":"entity.template",
    "contextComposite":"composite.template",
