--- a/templates/vue-vuetify/manifesto1.json
+++ b/templates/vue-vuetify/manifesto1.json
@@ -7,7 +7,8 @@
    "useCases":[
       {"name":"form", "folder":"src/components" },
       {"name":"details", "folder":"src/components" },
-      {"name":"list", "folder":"src/components" }
+      {"name":"list", "folder":"src/components" },
+      {"name":"view", "folder":"src/views" }
    ],
    "entity":"entity.template",
    "contextComposite":"composite.template",
