--- a/templates/vue-routes/manifesto1.json
+++ b/templates/vue-routes/manifesto1.json
@@ -10,6 +10,7 @@
    "entity":"entity.template",
    "contextComposite":"composite.template",
    "contexts":[ "script" ],
+   "generationStrategy" :"combinedAggregate",
    "primitives":[{
       "key":"entity",
       "type":"entity",
