--- a/templates/vue-vuetify/manifesto1.json
+++ b/templates/vue-vuetify/manifesto1.json
@@ -17,6 +17,7 @@
       "script",
       "css"
    ],
+   "generationStrategy" :"singleAggregate",
    "primitives":[
       {
          "key":"entity",
