minor fixes to templates

--- a/templates/api-client/manifesto1.json
+++ b/templates/api-client/manifesto1.json
@@ -12,6 +12,7 @@
    "contexts":[
       "script"
    ],
+   "generationStrategy" :"singleAggregate",
    "primitives":[
       {
          "key":"entity",
