--- a/templates/api-client/repository/script/entity.template
+++ b/templates/api-client/repository/script/entity.template
@@ -13,7 +13,8 @@ export default class {{pascal entityName}}RepositoryProxy {
   }
 
   static async delete({{entityName}}) {
-    const url = `${process.env.VUE_APP_API_SERVER}/api/v1/{{entityName}}s/${ {{entityName}}._id}`;
+    const entityId = {{entityName}}._id;
+    const url = `${process.env.VUE_APP_API_SERVER}/api/v1/{{entityName}}s/${entityId}`;
     try {
       await axios.delete(url, {
         //    headers: {
@@ -44,7 +45,8 @@ export default class {{pascal entityName}}RepositoryProxy {
 
   static async update({{entityName}}) {
     alert(JSON.stringify({{entityName}}));
-    const url = `${process.env.VUE_APP_API_SERVER}/api/v1/{{entityName}}s/${ {{entityName}}._id}`;
+    const entityId = {{entityName}}._id;
+    const url = `${process.env.VUE_APP_API_SERVER}/api/v1/{{entityName}}s/${entityId}`;
     try {
       await axios.put(url, {
       //    headers: {
