Test for sending email

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-yaml": "^3.13.1"
   },
   "dependencies": {
-    "lodash": "4.17.19"
+    "lodash": "4.17.19",
+    "nodemailer": "6.4.10"
   }
 }
