added support for clean architecture

--- a/templates/api-client/manifesto.json
+++ b/templates/api-client/manifesto.json
@@ -5,7 +5,7 @@
       "api-client"
    ],
    "useCases":[
-       {"name":"repository", "folder":"src/lib" }
+       {"name":"repository", "folder":"src/{{entityName}}/lib" }
    ],
    "entity":"entity.template",
    "contextComposite":"composite.template",
