--- a/templates/nodejs/lib/manifesto.json
+++ b/templates/nodejs/lib/manifesto.json
@@ -7,7 +7,7 @@
     "useCases": [
         {
             "name": "lib",
-            "folder": "lib"
+            "folder": "{{entityName}}/lib"
         }
     ],
     "entity": "entity.template",
