--- a/templates/nodejs/route-reg/import/entity.template
+++ b/templates/nodejs/route-reg/import/entity.template
@@ -1,1 +1,1 @@
-const {{entityName}}sRouter = require('./{{entityName}}');
+const {{entityName}}sRouter = require('../{{entityName}}/routes/{{entityName}}');
