Templates for image and longtext added

--- a/templates/vue-vuetify/manifesto.json
+++ b/templates/vue-vuetify/manifesto.json
@@ -53,6 +53,16 @@
          "key":"count",
          "type":"property",
          "definition":"count.template"
+      },
+      {
+         "key":"longtext",
+         "type":"property",
+         "definition":"longtext.template"
+      },
+      {
+         "key":"image",
+         "type":"property",
+         "definition":"image.template"
       }
    ]
 }
