--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest  --no-cache "
   },
@@ -17,15 +18,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "7.9.6",
+    "@babel/core": "~7.9.6",
+    "@babel/preset-env": "~7.9.6",
     "babel-jest": "^24.9.0",
-    "handlebars": "4.7.6",
-    "jest": "^24.8.0",
-    "js-yaml": "^3.13.1"
+    "handlebars": "~4.7.6",
+    "jest": "~24.8.0",
+    "js-yaml": "~3.13.1"
   },
   "dependencies": {
-    "lodash": "4.17.19",
-    "nodemailer": "6.4.10"
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "lodash": "~4.17.19",
+    "nodemailer": "~6.4.10"
   }
 }
