--- a/templates/create/vue-vuetify/view/html/entity.template
+++ b/templates/create/vue-vuetify/view/html/entity.template
@@ -1,19 +1,34 @@
- <div class="{{entityName}}">
-    <{{pascal entityName}}Details v-bind:{{entityName}}="current{{pascal entityName}}"
+ <div class="{{entityName}}s">
+    <{{pascal entityName}}Details 
       v-show="isVisible{{pascal entityName}}Details"
-      v-on:close-{{entityName}}-details="close{{pascal entityName}}Details"/>
+      :{{entityName}}="current{{pascal entityName}}"
+      @close-{{entityName}}-details="close{{pascal entityName}}Details"
+    />
 
-    <v-icon @click="showAdd{{pascal entityName}}Form" v-show="!isVisible{{pascal entityName}}Form">add_circle</v-icon>
-    <{{pascal entityName}}Form
-      v-show="isVisible{{pascal entityName}}Form"
-      v-bind:{{entityName}}="current{{pascal entityName}}"
-      v-bind:is-updating="isUpdating{{pascal entityName}}"
-      v-on:add-{{entityName}}="add{{pascal entityName}}"
-      v-on:update-{{entityName}}="update{{pascal entityName}}"
-      v-on:cancel-add-{{entityName}}="cancelAdd{{pascal entityName}}"/>
-    <h1 class="display-2 blue darken-4 white--text text--lighten-1">{{pascal entityName}} list</h1>
-    <{{pascal entityName}}List v-bind:{{entityName}}s="{{entityName}}s"
-      v-on:show-{{entityName}}="show{{pascal entityName}}Details"
-      v-on:edit-{{entityName}}="edit{{pascal entityName}}"
-      v-on:delete-{{entityName}}="delete{{pascal entityName}}"/>
+    <v-icon v-show="!isVisible{{pascal entityName}}Form" @click="showAdd{{pascal entityName}}Form">
+      add_circle
+    </v-icon>
+    <v-container>
+      <v-row>
+        <v-col>
+          <{{pascal entityName}}Form
+            v-show="isVisible{{pascal entityName}}Form"
+            :{{entityName}}="current{{pascal entityName}}"
+            :is-updating="isUpdating{{pascal entityName}}"
+            @add-{{entityName}}="add{{pascal entityName}}"
+            @update-{{entityName}}="update{{pascal entityName}}"
+            @cancel-add-{{entityName}}="cancelAdd{{pascal entityName}}"
+          />
+        </v-col>
+      </v-row>
+    </v-container>
+    <h1 class="display-2 blue darken-4 white--text text--lighten-1">
+      {{pascal entityName}} list
+    </h1>
+    <{{pascal entityName}}List 
+      :{{entityName}}s="{{entityName}}s"
+      @show-{{entityName}}="show{{pascal entityName}}Details"
+      @edit-{{entityName}}="edit{{pascal entityName}}"
+      @delete-{{entityName}}="delete{{pascal entityName}}"
+    />
   </div>
