- Upgrade jest version - Remove babel jest requirement - Migrate 'require' to 'import'

--- a/models/sample/ideal_model.yml
+++ b/models/sample/ideal_model.yml
@@ -11,7 +11,7 @@ definitions:
     station:
       name: name
       description: description
-      owner: person aggregate
+      owner: person
       nicks: collectionOf name
       wheels: collectionOf wheel
   value-objects:
