--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest  --no-cache "
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "jest": {
     "testMatch": [
@@ -18,16 +18,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "~7.9.6",
-    "@babel/preset-env": "~7.9.6",
-    "babel-jest": "^24.9.0",
+    "jest": "^29.7.0",
     "handlebars": "~4.7.6",
-    "jest": "~24.8.0",
     "js-yaml": "~3.13.1"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+
     "lodash": "~4.17.19",
     "nodemailer": "~6.4.10"
   }
